--- a/contents/compelling/mission.tex
+++ b/contents/compelling/mission.tex
@@ -1,29 +1,58 @@
 \subsection{Mission}
-Nuestra mision aparte de alcanzar el objetivo marcado es atraer usuarios para los que habremos creado un
-valor y asi lograr su satisfaccion.
+Nuestra mision aparte de alcanzar el objetivo marcado es atraer usuarios.
+El usuario nos busca poco somos unicos, porque le ofrecemos algo que
+nadie mas le ofrece, porque somos diferentes. Despuntar entre los demas.
+Queremos que el usuario confie en nosotros, nos valores, nos aprecie, que cree un vinculo con nosotros. Para
+ello tendremos que cultivar la relacion y ofrecerle un valor que le proporcione satisfaccion.
  
---porque utilizar nuestro producto y no otro 
---crear una relacion con el producto
---diferenciacion del producto 
-Caracteristicas que otros no tienen, datos mas actualizados y acurados, mayor cobertura de informacion
-\begin{itemize}
+Para lograr esta satisfaccion, tenemos que tener una mision clara, que es lo que ofrecemos, que nos hace diferentes.
+Nos podemos plantear cuales son las caracteristicas que otros no tienen, como datos mas actualizados y acurados, 
+mayor cobertura de informacion o una funcionalidad que hasta ahora no existe que por ejemplo pueda utilizar la 
+informacion que ofrecemos para resolver un problema cotidiano.
 
-    \item usuario no sabe que tiene la necesidad
-    \item necesidad para el usuario
-    \item fundamental para la vida diaria
-    \item mejora para sus tareas diarias
-    \item personalizacion
-    \item Ligar la informacion a la resolucion de problemas comunes
-    \item \end{itemize}
+Una vez marcada nuestra mision, nos enfrentamos a una serie de problemas, puede que el usario no sepa que 
+necesita de esta caracteristica que le proporcionamos. Tenemos un desafio doble, el ofrecerselo a los usuarios y 
+el hacerle ver que en realidad es necesario, que le ayuda en su rutina o vida diaria.
+
+
 \subsubsection{How to solve it} 
-
+Deberemos estudiar y analizar que carencias tiene el mercado actualmente y que necesidades tiene el usuario.
+Nos plantearemos una serie de preguntas, como pueden ser de que manera puede ayudarme tener este conocimiento.
 
 \subsubsection{How we solve it. Aire Guru} 
- 
+La mision de Aire Guru es incrementar el concienciamiento de la calidad del Aire. 
+Existen varias problematicas respecto a este tema, el primero es la desinformacion del usuario, ya que no es 
+consciente de los niveles de poluciones a los que esta expuesto y por otro lado no sabe como le puede perjudiar
+a corto o largo plazo.
+
+Aire Guru intenta alertar de la situacion, de una forma que todo el mundo independiente de su nivel cultural 
+pueda entender como la calidad del aire nos influye. Pretende poner al alcance de todos el conocimiento sobre
+esta problematica. Como de nocivo es vivir en un area altamente contaminada y cuales son las funtes de contaminacion
+mas comunes, para que asi, podamos incrementar la concienciacion y poder hacer algo al respecto.
+
+
+Aire Guru incluye en su glosario las condiciones medicas mas comunes que pueden verse afectadas por la contaminacion
+del aire, los agentes contaminantes y las fuentes que provocan estos agentes. Esta acompanado por una iconografia
+que refleja cada uno de los sintomas.\\
+
+
+ \begin{figure}[ht]
+    \centering
+   \subfigure[Glossary detail]
+    {\includegraphics[width=6.2cm  ]{no2_glosary}}
+    \hfill
+     \subfigure[iconography detail]
+     { \includegraphics[width=5cm]{iconography}}
+  
+  \caption{Glossary}
+    \end{figure}
+
+
 \elsparagraph{Evaluation}  
 \begin{itemize}
-    \done
-    \crossed
+    \done En la encuesta realizada, los usuarios nos comentaron que habia crecido su interes por la contaminacion
+    del aire. Algunos de ellos descubrieron que tenian una condicion medica que resulta afectada por la polucion.
+    \crossed Aire Guru necesita mas expansion.
     
 \end{itemize}
 \newpage
