--- a/contents/compelling/userExperience.tex
+++ b/contents/compelling/userExperience.tex
@@ -64,7 +64,10 @@ prestar atencion al significado de los datos en vez de perderse en el diseno e i
 
 Debido a la gran cantidad de datos que se le ofrece al usuario, se ha implementado una rueda de espera para indicar
 que la herramienta esta procesando informacion. Cada vez que se pulsa un control en la pagina, se indica con un cambio
-de tonalidad.
+de tonalidad. Ademas se utilizan transiciones progresivas, cuando las graficas tienen que representar informacion nueva no lo hace 
+de golpe, ya que esto podria producir un guino que puede ser interpretado como un error por parte del usuario.
+
+
 \elsparagraph{Evaluation}  
 \begin{itemize}
     \done Tiene una estetica relajada donde prima las graficas con la informacion
