--- a/contents/evaluation.tex
+++ b/contents/evaluation.tex
@@ -1,9 +1,9 @@
 \newpage
 \section{Evaluation}
 Para la valoración de la experiencia de usuario, se ha propuesto a 14 usuarios que prueben la herramienta libremente. 
-Tras una semana, se propone a los usuarios de prueba la siguiente encuesta
-Esta encuesta contiene preguntas concretas sobre la comprensibilidad de la información y sobre la usabilidad. Además, 
-se les proporciona un espacio en cada una de las preguntas para que los encuestados puedan realizar sus propias aportaciones. 
+Tras una semana, se propone a los usuarios de prueba una encuesta que contiene preguntas concretas sobre la comprensibilidad
+de la información y sobre la usabilidad. Además, se les proporciona un espacio en cada una de las preguntas para que los
+encuestados puedan realizar sus propias aportaciones. 
 
 \begin{figure}[ht]
    \centering
@@ -26,11 +26,3 @@ a la herramienta.
 Entre los sujetos de prueba, se ha reconocido una mayor concienciación por la contaminación, demostrando más interés sobre la 
 calidad del aire en la ciudad y sus posibles efectos en la salud
 
-\begin{itemize}
-   \item  { Methodology, Results } / 
-   \item   -Enquete, real test results...
-   \item   -Analysis of the results   
-   \item   Podemos entender  que significa cada uno de los campos representados en el conjunto de dato gracias a la 
-   informacion complementaria presentada en el portal de datos abiertos y por la informacion proporcionada por la 
-   empresa encargada de  recolectar los datos.
-\end{itemize}
