--- a/contents/conclusion.tex
+++ b/contents/conclusion.tex
@@ -14,3 +14,7 @@ Aire Guru esta disponible.....
 Asi pues, para que el usuario pueda obtener la informacion de una manera directa, requiere de conocimientos tanto 
 de programacion como especificos de la materia y los recursos para crear una infraestructura que le permita implementar 
 una representacion de los datos que le sea util.
+
+---He puesto descripcion de secciones?
+--he puesto descripcion historial personal?
+-Importar google ubicaciones?
