adding figures to compelling

--- a/contents/compelling/attractive.tex
+++ b/contents/compelling/attractive.tex
@@ -55,13 +55,36 @@ El cuerpo se divide en tres secciones horizontales, la zona superior con el mapa
 la zona media donde podemos filtrar los agentes contaminantes por condiciones medicas e informacion sobre la situacion actual y la 
 zona inferior donde encontraremos el historial de zona y el personalizado.
 
-Los componentes estandares son:
-los botones, que se oscurecen cuando estan seleccionados y utilizar una tonalidad mas resultona cuando se seleccionan.
-Pestanas, con un comportamiento similar y un aspecto de pestana estandar
-Simbolo de espera, circulo rotatorio
-Links, textos subrayados
-Barra de busqueda, igual que la que encontramos en los buscadores
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=12cm]{heading}
+    \caption{Heading}
+\end{figure}
 
+Los componentes estandares son:
+\begin{itemize}
+ \item los botones, que se oscurecen cuando estan seleccionados y utilizar una tonalidad mas resultona cuando se seleccionan.
+\item Pestanas, con un comportamiento similar y un aspecto de pestana estandar
+\item Simbolo de espera, circulo rotatorio
+\item Links, textos subrayados
+\item Barra de busqueda, igual que la que encontramos en los buscadores
+\end{itemize}
+
+
+
+\begin{figure}[ht]
+    \centering
+   \subfigure[Searching bar]
+    {\includegraphics[width=5.5cm  ]{searchingBar}}
+    \hfill
+    \subfigure [Tabs]
+       { \includegraphics[width=5.5cm]{tabs}}
+    \vfill
+     \subfigure[Link]
+     { \centering \includegraphics[width=6cm]{link}}
+  
+  \caption{Filters}
+    \end{figure}
 Los elementos que nos aportan familiaridad son la iconografia que utilizamos para mostrar el AQI. Utilizamos nubes, por representacion
 del aire, el entorno, se acompana de un corazon si la calidad es buena, de un simbolo de exclamacion si es pobre, de una cruz si es 
 mala y cambiamos a una mascara de gas si el estado es insalubre.
@@ -71,6 +94,9 @@ ya que los usuarios estan familiarizados por como se ven y en su manejo.
 
 El simbolo de nuestra herramienta es un genio, es decir un guru, ademas, incluimos "Aire" en el logo, porque representa perfectamente
 que mostramos. Nuestra herramienta es el genio del Aire.
+
+Por ultimo, se ha tenido en cuenta que el usuario puede utilizar nuestra herramienta en distintos dispositivos, por lo que se han implementado 
+dos formatos distintos, uno para pantallas mas amplias como el de ordenador y otro para formato mas pequeno para tableta o movil.
 
 
 \elsparagraph{Evaluation}  
